[tool.poetry]
name = "poetry-legacy-reproducer"
version = "0.1.0"
description = ""
authors = ["Martin Schulze <martin.schulze@e2m.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "legacy"
url = "https://pypi.python.org/pypi"
